# rozvidrought-datasets

./: .gitignore  pyproject.toml
src/rozvidrought_datasets/: __init__.py
src/rozvidrought_datasets/grid/: __init__.py  bounds.py  geometry.py  grid.py  indexing.py  locator.py  spec.py
src/rozvidrought_datasets/locator/: __init__.py  multi_overlap.py  multipolygons.py  overlap.py  points.py  polygons.py
tests/: test_bounds.py  test_bounds_values.py  test_geometry.py  test_grid_indexing.py  test_grid_object.py  test_locator.py  test_multipolygon_locator.py  test_overlap.py  test_polygon_locator.py
