[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rozvidrought-datasets"
version = "0.0.1"
description = "Spatial data and grid adapter layer for RozviDrought models"
authors = [{name = "Simon Mutunga"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "shapely>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]